[package]
name = "gyromouse"
version = "0.1.0"
authors = ["Mikaël Fourrier <mikael.fourrier@pm.me>"]
edition = "2018"
description = "Input mapper for gamepads in game and desktop"
repository = "https://github.com/Yamakaky/gyromouse"
resolver = "2"

[features]
default = ["sdl2", "vgamepad", "gui"]
hidapi = ["hid-gamepad", "joycon"]
sdl2-static = ["sdl2", "sdl2/static-link", "sdl2/use-vcpkg"]
vgamepad = ["virtual-gamepad"]
gui = ["sdl2", "egui", "egui_sdl2_gl", "wgpu", "futures", "bytemuck"]

[profile.release]
lto = true

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
cgmath = "0.18"
clap = "3.0.0-beta.2"
enigo = { git = "https://github.com/Yamakaky/enigo", branch = "xdo-sys" }
# see https://gitlab.com/KonradBorowski/enum-map/-/issues/20
enum-map = "0.6"
hid-gamepad-types = { git = "https://github.com/Yamakaky/joy" }
hid-gamepad = { git = "https://github.com/Yamakaky/joy", optional = true }
joycon = { git = "https://github.com/Yamakaky/joy", optional = true }
nom = "7.0.0"
nom-supreme = "0.6.0"
human-panic = "1.0.3"
virtual-gamepad = { git = "https://github.com/Yamakaky/virtual-gamepad", optional = true }
egui = { version = "0.14.0", optional = true }
egui_sdl2_gl = { git = "https://github.com/Yamakaky/egui_sdl2_gl", branch = "yama-sdl", optional = true, default-features = false }
wgpu = { version = "0.10.1", optional = true }
futures = { version = "0.3.17", optional = true, default-features = false, features = ["executor"] }
bytemuck = { version = "1.7.2", optional = true, features = ["derive"] }
env_logger = "0.9.0"

[dependencies.sdl2]
git = "https://github.com/Yamakaky/rust-sdl2"
branch = "sensor-api"
optional = true 
features = ["raw-window-handle"]

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/Yamakaky/vcpkg"
branch = "sdl-hidapi"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
