[package]
name = "gyromouse"
version = "0.1.0"
authors = ["Mikaël Fourrier <mikael.fourrier@pm.me>"]
edition = "2021"
description = "Input mapper for gamepads in game and desktop"
repository = "https://github.com/Yamakaky/gyromouse"

[features]
default = ["sdl2", "vgamepad", "gui"]
hidapi = ["hid-gamepad", "joycon"]
sdl2-static = ["sdl2", "sdl2/static-link", "sdl2/use-vcpkg"]
vgamepad = ["virtual-gamepad"]
gui = ["sdl2", "egui", "egui_sdl2_gl", "egui_wgpu_backend", "wgpu", "pollster", "bytemuck", "image", "gltf", "crevice", "mint"]

[profile.release]
lto = true

[dependencies]
anyhow = { version = "1.0.44", features = ["backtrace"] }
cgmath = { version = "0.18.0", features = ["mint"] }
clap = "3.0.0-beta.5"
enigo = { git = "https://github.com/Yamakaky/enigo", branch = "xdo-sys" }
# see https://gitlab.com/KonradBorowski/enum-map/-/issues/20
enum-map = "0.6"
hid-gamepad-types = { git = "https://github.com/Yamakaky/joy" }
hid-gamepad = { git = "https://github.com/Yamakaky/joy", optional = true }
joycon = { git = "https://github.com/Yamakaky/joy", optional = true }
nom = "7.0.0"
nom-supreme = "0.6.0"
human-panic = "1.0.3"
virtual-gamepad = { git = "https://github.com/Yamakaky/virtual-gamepad", optional = true }
egui = { version = "0.14.2", optional = true }
egui_sdl2_gl = { git = "https://github.com/Yamakaky/egui_sdl2_gl", branch = "yama-sdl", optional = true, default-features = false }
wgpu = { version = "0.11.0", optional = true }
bytemuck = { version = "1.7.2", optional = true, features = ["derive"] }
env_logger = "0.9.0"
pollster = { version = "0.2.4", optional = true }
egui_wgpu_backend = { version = "0.13.0", optional = true }
image = { version = "0.23.14", optional = true, default-features = false, features = ["jpeg"] }
gltf = { version = "0.16.0", optional = true }
crevice = { version = "0.7.1", optional = true }
mint = { version = "0.5.7", optional = true }

[dependencies.sdl2]
version = "0.35.0"
optional = true 
features = ["raw-window-handle", "hidapi"]

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/Yamakaky/vcpkg"
branch = "sdl-hidapi"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
