[package]
name = "gyromouse"
version = "0.1.0"
authors = ["Mikaël Fourrier <mikael.fourrier@pm.me>"]
edition = "2018"
description = "Input mapper for gamepads in game and desktop"
repository = "https://github.com/Yamakaky/gyromouse"
resolver = "2"

[features]
default = ["sdl2", "vgamepad"]
hidapi = ["hid-gamepad", "joycon"]
sdl2-static = ["sdl2", "sdl2/static-link", "sdl2/use-vcpkg"]
vgamepad = ["virtual-gamepad"]

[profile.release]
lto = true

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
cgmath = "0.18"
clap = { version = "4.0", features = ["cargo", "derive"] }
enigo = { version = "0.2", features = ["wayland"] }
enum-map = "2.0"
hid-gamepad-types = { git = "https://github.com/Yamakaky/joy" }
hid-gamepad = { git = "https://github.com/Yamakaky/joy", optional = true }
joycon = { git = "https://github.com/Yamakaky/joy", optional = true }
nom = "7.0.0"
nom-supreme = "0.8"
human-panic = "2.0"
virtual-gamepad = { git = "https://github.com/Yamakaky/virtual-gamepad", optional = true }
sdl2 = { version = "0.36", features = ["hidapi"], optional = true }

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/Yamakaky/vcpkg"
branch = "sdl-hidapi"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
